--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-    "functions": {
-      "backend/server.js": {
-        "maxDuration": 10
-      }
-    }
-  }
+  "version": 2,
+  "name": "Shopit",
+  "builds": [
+    { "src": "backend/server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/backend/server.js" }
+  ]
+}
